<resources>
    <string name="app_name">Assignment1</string>
    <string name="cd_item_image">Item image</string>
    <string name="title_catalog">Restaurants in Perth</string>
    <string name="switch_grid">Grid</string>
    <string name="all_categories">All</string>

    <string name="cat_vietnamese">Vietnamese</string>
    <string name="cat_italian">Italian</string>
    <string name="cat_japanese">Japanese</string>
    <string name="cat_chinese">Chinese</string>
    <string name="cat_thai">Thai</string>
    <string name="cat_indian">Indian</string>

    <string name="filter_nearby">Near me</string>
    <string name="rationale_location">To show places near you, we need your location.</string>
    <!-- Favourites & detail actions -->
    <string name="filter_favourites">Favourites</string>
    <string name="cd_favourite">Toggle favourite</string>
    <string name="action_close">Close</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_remove_favourite">Remove Favourite</string>
    <string name="action_open_maps">Open in Maps</string>

    <string name="search_hint">Search restaurants...</string>
    <string name="google_maps_key">AIzaSyCKespCKLa6FVYl1sltuFF5vPOPoKIgLPs</string>

    <string name="distance_unknown">Distance: -</string>
    <string name="open_in_maps">Open in Maps</string>

    <string name="filter_distance">Distance</string>
    <string name="distance_sort_nearest">Sort: Closest</string>
    <string name="distance_sort_furthest">Sort: Furthest</string>
    <string name="distance_sort_off">Sort: Off</string>
    <string name="distance_nearby_toggle">Toggle: Within 10 km</string>
    <string name="distance_refresh_location">Refresh my location</string>
    <string name="distance_clear_location">Clear location</string>

</resources>